clusters/firefly/apps/homeassistant/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: homeassistant
  namespace: homeassistant
spec:
  replicas: 1
  selector:
    matchLabels:
      app: homeassistant
  template:
    metadata:
      labels:
        app: homeassistant
    spec:
      hostNetwork: true
      dnsPolicy: ClusterFirstWithHostNet # Adjust DNS policy when using host networking
      containers:
        - name: homeassistant
          image: ghcr.io/home-assistant/home-assistant:stable
          resources:
            requests:
              memory: "128Mi"
              cpu: "75m"
            limits:
              memory: "512Mi"
              cpu: "300m"
          ports:
            - containerPort: 8123 # Home Assistant web UI
          volumeMounts:
            - mountPath: /config
              name: homeassistant-config
      volumes:
        - name: homeassistant-config
          persistentVolumeClaim:
            claimName: homeassistant
