clusters/firefly/apps/homeassistant/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: homeassistant-ingress
  namespace: homeassistant
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/service.serversscheme: http
    traefik.ingress.kubernetes.io/router.tls: "true"
    cert-manager.io/cluster-issuer: letsencrypt-dns
spec:
    tls:
      - hosts:
          - homeassistant.sargeant.co
        secretName: homeassistant-tls
    rules:
      - host: homeassistant.sargeant.co
        http:
          paths:
            - path: /
              pathType: Prefix
              backend:
                service:
                  name: homeassistant
                  port:
                    number: 8123
